--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - .:/app:delegated
       - node_modules:/app/node_modules
       - next:/app/.next
+      - ../millipede_docs:/app/public/docs:ro
     ports:
       - "3000:3000"
     working_dir: /app
