First draft of build workflow (no side effects)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,17 +13,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout main
         uses: actions/checkout@v2
-      - name: Checkout Docs
+        with:
+          path: main
+          
+      - name: Checkout build
+        uses: actions/checkout@v2
+        with:
+          repository: millipede-guide/millipede-guide-build
+          path: build
+        
+      - name: Checkout docs
         uses: actions/checkout@v2
         with:
           repository: millipede-guide/millipede-guide-docs
-          path: public/docs
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: '13.x'
+          path: build/public/docs
+
+      - run: cd build
+      - run: git merge ../main
       - run: npm ci
       - run: npm run docs
       - run: npm run build
