try with github_token

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,4 @@ jobs:
           repository: millipede-guide/millipede-guide-build
           branch: master
           force: true
-
-          
-          
+          github_token: ${{ secrets.PAT }}
