--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
         
       - name: Compile docs
         run: npm run docs
+
+      - name: Delete original photos
+        run: rm -rf public/photos/orig
         
       - name: Next.js build
         run: npm run build
@@ -34,20 +37,16 @@ jobs:
       - name: Next.js export
         run: npm run export
         
-      - name: Fix Git Ignore
-        run: |
-          sed -i '/^\/docs$/d' .gitignore
-          echo '/docs/docs' >> .gitignore
-          echo '/docs/photos/orig' >> .gitignore
-          touch ./docs/.nojekyll
-          echo 'www.millipede-guide.com' > ./docs/CNAME
+      - name: Set CNAME
+        run: echo 'www.millipede-guide.com' > out/CNAME
+
+      - name: Set No Jekyll
+        run: touch out/.nojekyll
 
       - name: Git Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           BRANCH: gh-pages
-          FOLDER: docs
+          FOLDER: out
           CLEAN: true
           SINGLE_COMMIT: true
-          
-
