--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
         "routes": "node -e 'require(\"./next.config.js\").exportPathMap()'",
         "prettier": "prettier --write '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js'",
         "lint": "eslint --fix --ignore-pattern '!.eslintrc.js' '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js'",
-        "docs": "cd ./public/docs && node scripts/validate.js && cd ../.. && node scripts/photos.js && node scripts/gpxToGeoJson.js && node scripts/docsExport.js && node scripts/buildIndex.js"
+        "docs": "cd ./public/docs && node scripts/validate.js && cd ../.. && node scripts/photos.js && node scripts/docsExport.js && node scripts/buildIndex.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@mapbox/togeojson": "^0.16.0",
         "@material-ui/core": "^4.9.7",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.46",
@@ -51,8 +50,7 @@
         "togpx": "^0.5.4",
         "tokml": "^0.4.0",
         "typeface-roboto": "0.0.75",
-        "underscore.string": "^3.3.5",
-        "xmldom": "^0.3.0"
+        "underscore.string": "^3.3.5"
     },
     "devDependencies": {
         "babel-eslint": "^10.1.0",
