--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
           ref: gh-pages
           path: out
 
+      - name: Reload original photo files
+        run: mv out/photos/orig/* public/photos/orig/
+
       - name: NPM Install
         run: npm ci
         
