Improve photo download build script.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
           ref: gh-pages
           path: out
 
-      - name: Reload original photo files
-        run: mv out/photos/orig/* public/photos/orig/
+      # - name: Reload original photo files
+      #   run: mv out/photos/orig/* public/photos/orig/
 
       - name: NPM Install
         run: npm ci
@@ -54,4 +54,4 @@ jobs:
           BRANCH: gh-pages
           FOLDER: out
           CLEAN: true
-          SINGLE_COMMIT: true
+          # SINGLE_COMMIT: true
