Improve altitude profile and other misc page changes.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "export": "next export",
         "prod": "next start",
         "routes": "node -e 'require(\"./next.config.js\").exportPathMap()'",
-        "prettier": "prettier --write '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js'",
-        "lint": "eslint --fix --ignore-pattern '!.eslintrc.js' '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js'",
+        "prettier": "prettier --write '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js' 'public/docs/scripts/**/*.js'",
+        "lint": "eslint --fix --ignore-pattern '!.eslintrc.js' '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js' 'public/docs/scripts/**/*.js'",
         "docs": "cd ./public/docs && node scripts/validate.js && cd ../.. && node scripts/photos.js && node scripts/docsExport.js && node scripts/buildIndex.js"
     },
     "keywords": [],
@@ -33,7 +33,7 @@
         "jsonschema": "^1.2.6",
         "leaflet": "^1.6.0",
         "leaflet.fullscreen": "^1.6.0",
-        "mdi-material-ui": "^6.13.0",
+        "mdi-material-ui": "^6.13.2",
         "mkdirp": "^1.0.3",
         "moment": "^2.24.0",
         "next": "^9.3.2",
