--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "export": "next export",
         "prod": "next start",
         "routes": "node -e 'require(\"./next.config.js\").exportPathMap()'",
-        "prettier": "prettier --write '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js' 'public/docs/scripts/**/*.js'",
-        "lint": "eslint --fix --ignore-pattern '!.eslintrc.js' '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js' 'public/docs/scripts/**/*.js'",
+        "prettier": "prettier --write '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js'",
+        "lint": "eslint --fix --ignore-pattern '!.eslintrc.js' '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js'",
         "docs": "cd ./public/docs && node scripts/validate.js && cd ../.. && node scripts/photos.js && node scripts/docsExport.js && node scripts/buildIndex.js"
     },
     "keywords": [],
@@ -21,7 +21,6 @@
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.46",
         "@mdi/font": "^5.0.45",
-        "@skyeer/react-leaflet-custom-control": "0.0.6",
         "chart.js": "^2.9.3",
         "chartjs-plugin-datalabels": "^0.7.0",
         "clsx": "^1.1.0",
@@ -31,8 +30,6 @@
         "isomorphic-unfetch": "^3.0.0",
         "js-yaml": "^3.13.1",
         "jsonschema": "^1.2.6",
-        "leaflet": "^1.6.0",
-        "leaflet.fullscreen": "^1.6.0",
         "mdi-material-ui": "^6.13.2",
         "mkdirp": "^1.0.3",
         "moment": "^2.24.0",
@@ -43,7 +40,6 @@
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
         "react-image-lightbox": "^5.1.1",
-        "react-leaflet": "^2.6.3",
         "react-markdown": "^4.3.1",
         "sharp": "^0.25.2",
         "swr": "^0.1.18",
