--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "mkdirp": "^1.0.3",
         "moment": "^2.24.0",
         "next": "^9.3.2",
+        "next-offline": "^5.0.1",
         "normalize.css": "^8.0.1",
         "pretty-metric": "^1.1.1",
         "prop-types": "^15.7.2",
