--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Millipede Guide",
-  "short_name": "Millipede Guide",
+  "name": "Millipede-Guide",
+  "short_name": "Millipede-Guide",
   "theme_color": "#558b2f",
   "background_color": "#ffffff",
   "display": "standalone",
