Convert commonJS modules to ES modules and other package cleanup.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: Checkout main
         uses: actions/checkout@v2
+
+      - name: ESLint
+        run: npm run eslint
         
       - name: Checkout docs
         uses: actions/checkout@v2
