--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-    "name": "app",
+    "name": "millipede-guide",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
     "scripts": {
         "dev": "next",
-        "build": "webpack --config leaflet.webpack.config.js && next build",
+        "build": "webpack --config leaflet.webpack.config.cjs && next build",
         "export": "next export",
         "prod": "next start",
         "routes": "node -e 'require(\"./next.config.js\").exportPathMap()'",
-        "prettier": "prettier --write '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js'",
-        "lint": "eslint --fix --ignore-pattern '!.eslintrc.js' '*.js'  'pages/**/*.js*' 'components/**/*.js*' 'css/**/*.js' 'utils/**/*.js' 'scripts/**/*.js'",
-        "docs": "node scripts/photos.js && node scripts/docsExport.js && node scripts/buildIndex.js"
+        "prettier": "prettier --write '*.js' '{components,pages,scripts,utils}/**/*.{js,jsx,mjs,cjs}'",
+        "eslint": "eslint --fix 'next.config.js' 'components/**/*' 'pages/**/*' 'scripts/**/*' 'utils/**/*'",
+        "docs": "node --experimental-modules scripts/photos.mjs && node --experimental-modules scripts/docsExport.mjs && node --experimental-modules scripts/buildIndex.mjs"
     },
     "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "author": "Reilly Beacom",
+    "license": "copyright",
     "dependencies": {
         "@date-io/moment": "^1.3.13",
         "@material-ui/core": "^4.9.7",
@@ -66,7 +65,7 @@
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^2.5.0",
-        "prettier": "^2.0.4",
+        "prettier": "^2.0.5",
         "standard": "^14.3.3"
     }
 }
