--- a/package.json
+++ b/package.json
@@ -9,44 +9,44 @@
         "prod": "next start",
         "routes": "node -e 'require(\"./next.config.js\").exportPathMap()'",
         "prettier": "prettier --write '*.js' '{components,pages,scripts,utils}/**/*.{js,jsx,mjs,cjs}'",
-        "eslint": "eslint --fix 'next.config.js' 'components/**/*' 'pages/**/*' 'scripts/**/*' 'utils/**/*'",
-        "docs": "node --experimental-modules scripts/photos.mjs && node --experimental-modules scripts/docsExport.mjs && node --experimental-modules scripts/buildIndex.mjs"
+        "eslint": "eslint --fix --ext .js,.mjs,.cjs,.jsx --ignore-path .gitignore .",
+        "docs": "node --experimental-modules scripts/photos.mjs && node --experimental-modules scripts/docsExport.mjs"
     },
     "keywords": [],
     "author": "Reilly Beacom",
     "license": "copyright",
     "dependencies": {
         "@date-io/moment": "^1.3.13",
-        "@material-ui/core": "^4.9.7",
+        "@material-ui/core": "^4.10.2",
         "@material-ui/icons": "^4.9.1",
-        "@material-ui/lab": "^4.0.0-alpha.46",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/pickers": "^3.2.10",
-        "@mdi/font": "^5.0.45",
+        "@mdi/font": "^5.3.45",
         "chart.js": "^2.9.3",
         "chartjs-plugin-datalabels": "^0.7.0",
-        "clsx": "^1.1.0",
+        "clsx": "^1.1.1",
         "data2xml": "^1.3.4",
         "exif": "^0.6.0",
         "glob": "^7.1.6",
         "isomorphic-unfetch": "^3.0.0",
-        "js-yaml": "^3.13.1",
+        "js-yaml": "^3.14.0",
         "jsonschema": "^1.2.6",
         "leaflet": "^1.6.0",
         "leaflet-fullscreen": "^1.0.2",
         "leaflet.markercluster": "^1.4.1",
-        "mdi-material-ui": "^6.13.2",
-        "mkdirp": "^1.0.3",
-        "moment": "^2.24.0",
-        "next": "^9.3.2",
-        "next-offline": "^5.0.1",
+        "mdi-material-ui": "^6.16.0",
+        "mkdirp": "^1.0.4",
+        "moment": "^2.26.0",
+        "next": "^9.4.4",
+        "next-offline": "^5.0.2",
         "normalize.css": "^8.0.1",
         "pretty-metric": "^1.1.1",
         "prop-types": "^15.7.2",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "react-image-lightbox": "^5.1.1",
         "react-markdown": "^4.3.1",
-        "sharp": "^0.25.2",
+        "sharp": "^0.25.4",
         "swr": "^0.1.18",
         "togpx": "^0.5.4",
         "tokml": "^0.4.0",
@@ -58,14 +58,14 @@
         "babel-eslint": "^10.1.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
-        "eslint-config-prettier": "^6.10.1",
+        "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-babel": "^5.3.0",
-        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-import": "^2.21.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.2",
-        "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "^2.5.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.20.0",
+        "eslint-plugin-react-hooks": "^2.5.1",
         "prettier": "^2.0.5",
-        "standard": "^14.3.3"
+        "standard": "^14.3.4"
     }
 }
