--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "prod": "next start",
         "routes": "node -e 'require(\"./next.config.js\").exportPathMap()'",
         "prettier": "prettier --write '*.js' '{components,pages,scripts,utils}/**/*.{js,jsx,mjs,cjs}'",
-        "eslint": "eslint --fix --ext .js,.mjs,.cjs,.jsx --ignore-path .gitignore .",
+        "linter": "eslint --fix --ext .js,.mjs,.cjs,.jsx --ignore-path .gitignore .",
         "docs": "node --experimental-modules scripts/photos.mjs && node --experimental-modules scripts/docsExport.mjs"
     },
     "keywords": [],
