--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -24,7 +24,11 @@ rules:
   react/require-default-props: 'off'
   react/react-in-jsx-scope: 'off'
   react/jsx-props-no-spreading: 'off'
+  react/forbid-prop-types: 'off'
   jsx-a11y/anchor-is-valid: 'off'
+  jsx-a11y/click-events-have-key-events: 'off'
+  jsx-a11y/no-noninteractive-element-interactions: 'off'
+  jsx-a11y/no-static-element-interactions: 'off'
   import/no-named-as-default: 'off'
   import/no-named-as-default-member: 'off'
 plugins:
@@ -40,7 +44,5 @@ settings:
       extensions:
         - .js
         - .jsx
-        - .mjs
   react:
     version: detect
-
