--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,38 +1,29 @@
 version: '3'
 
 services:
-  nextjs:
+  node:
     image: "node:12"
+    env_file:
+      - .env
     volumes:
-      - .:/app:delegated
+      - .:/app:cached
       - ../millipede_docs:/app/public/docs:ro
-      - next_build:/app/build
-      - next_out:/app/out
-      - node_modules:/app/node_modules
+      - next_build:/app/build:delegated
+      - next_out:/app/out:delegated
+      - node_modules:/app/node_modules:delegated
     ports:
       - "3000:3000"
     working_dir: /app
     networks:
+      - www
       - default
     command: sh -c "npm install && npm run dev"
 
-  # nginx:
-  #   image: nginx
-  #   env_file:
-  #     - .env
-  #   restart: unless-stopped
-  #   volumes:
-  #     - ./nginx-gzip.conf:/etc/nginx/conf.d/gzip.conf:ro
-  #     - ./out:/usr/share/nginx/html:ro
-  #   networks:
-  #     - default
-  #     - www
-    
 volumes:
   node_modules:
   next_build:
   next_out:
-        
+
 networks:
   www:
     external:
