--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -31,6 +31,7 @@ rules:
   jsx-a11y/no-static-element-interactions: 'off'
   import/no-named-as-default: 'off'
   import/no-named-as-default-member: 'off'
+  import/no-extraneous-dependencies: 'off'
 plugins:
   - babel
   - import
