--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm run docs
 
       - name: Lint
-        run: npm run linter
+        run: npm run linter && npm run prettier
 
       - name: Next.js build
         run: npm run build && npm run export
