--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout docs
         uses: actions/checkout@v2
         with:
-          repository: millipede-guide/millipede-guide-docs
+          repository: ${{ secrets.GH_DOCS_URL }}
           path: public/docs
 
       - name: Checkout build
