--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "leaflet": "^1.6.0",
         "leaflet-fullscreen": "^1.0.2",
         "leaflet.markercluster": "^1.4.1",
+        "lodash": "^4.17.15",
         "mdi-material-ui": "^6.16.0",
         "mkdirp": "^1.0.4",
         "moment": "^2.26.0",
