--- a/package.json
+++ b/package.json
@@ -18,19 +18,24 @@
     "license": "copyright",
     "dependencies": {
         "@date-io/moment": "^1.3.13",
+        "@mapbox/togeojson": "^0.16.0",
         "@material-ui/core": "^4.10.2",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/pickers": "^3.2.10",
         "@mdi/font": "^5.3.45",
+        "axios": "^0.19.2",
         "chart.js": "^2.9.3",
         "chartjs-plugin-datalabels": "^0.7.0",
+        "cheerio": "^1.0.0-rc.3",
         "clsx": "^1.1.1",
         "data2xml": "^1.3.4",
         "exif": "^0.6.0",
+        "geojson-utils": "^1.1.0",
         "glob": "^7.1.6",
         "isomorphic-unfetch": "^3.0.0",
         "js-yaml": "^3.14.0",
+        "jsdom": "^16.2.2",
         "jsonschema": "^1.2.6",
         "leaflet": "^1.6.0",
         "leaflet-fullscreen": "^1.0.2",
@@ -42,8 +47,10 @@
         "next": "^9.4.4",
         "next-offline": "^5.0.2",
         "normalize.css": "^8.0.1",
+        "path": "^0.12.7",
         "pretty-metric": "^1.1.1",
         "prop-types": "^15.7.2",
+        "query-overpass": "^1.5.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-image-lightbox": "^5.1.1",
@@ -54,13 +61,7 @@
         "tokml": "^0.4.0",
         "typeface-roboto": "0.0.75",
         "underscore.string": "^3.3.5",
-        "webpack-cli": "^3.3.11",
-        "path": "^0.12.7",
-        "@mapbox/togeojson": "^0.16.0",
-        "cheerio": "^1.0.0-rc.3",
-        "geojson-utils": "^1.1.0",
-        "jsdom": "^16.2.2",
-        "query-overpass": "^1.5.5"
+        "webpack-cli": "^3.3.11"
     },
     "devDependencies": {
         "serve": "^11.3.2",
